# A-Spatial-Digital-Twin-Prototype-for-Indoor-Spaces-with-Environmental-Factors

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.roo/: mcp.json
digital_twin/: __init__.py  __main__.py  baselines.py  demo.py  entities.py  gemma_bridge.py  hybrid_residual.py  learning.py  math_utils.py  mcp_server.py  model.py  recommendations.py  render.py  scenarios.py  service.py  web_demo.py
docs/: baseline_and_learning_results_zh.md  gemma_ollama_bridge_zh.md  graduation_requirements_checklist_zh.md  hybrid_residual_model_zh.md  literature_overlap_zh.md  mcp_service_zh.md  mcp_thesis_positioning_zh.md  model_reading_notes_zh.md  problem_statement_zh.md  reference_models_zh.md  research_proposal_zh.md  simulation_results_zh.md  thesis_draft_zh.md  thesis_guide_zh.md  web_demo_zh.md  window_matrix_simulation_zh.md
ieee_paper/: paper.aux  paper.bbl  paper.tex  references.bib
scripts/: ask_gemma.py  build_architecture_diagrams.py  build_lagrange_interpolation_paper_pptx.py  build_public_benchmark_figures.py  build_public_dataset_benchmark_templates.py  build_thesis_detailed_zh.py  build_thesis_detailed_zh_stable.py  build_thesis_docx.py  build_thesis_full_zh_mcp_updated.py  build_thesis_full_zh_stable.py  build_thesis_pdf.py  build_thesis_pptx.py  build_thesis_pptx_mcp_updated.py  build_thesis_presentation_agent_zh.js  build_thesis_presentation_agent_zh.py  build_training_templates.py  normalize_public_benchmark_data.py  prepare_experiment_data.py  run_all_thesis_experiments.py  run_bedroom_weekly_simulation.py  run_demo.py  run_mcp_server.py  (+8 more)
(+90 files in other folders)
