[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-single-room-spatial-digital-twin"
version = "0.1.0"
description = "MCP-enabled single-room digital twin prototype for temperature, humidity, and illuminance fields."
requires-python = ">=3.9"
